micro-kubernetes/rpi4/base-manifests/home-assistant-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-home-assistant
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: ha
    app.kubernetes.io/name: home-assistant
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
