micro-kubernetes/rpi4/base-manifests/home-assistant-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-home-assistant-lb
  namespace: default
spec:
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: 8123
  selector:
    app.kubernetes.io/instance: ha
    app.kubernetes.io/name: home-assistant
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
