micro-kubernetes/rpi4/base-manifests/pihole-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: pihole
    app.kubernetes.io/managed-by: Helm
    chart: pihole-1.8.23
    heritage: Helm
    release: pi
  name: pi-pihole-lb
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: pihole
    release: pi
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
